# dmidecode

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: baseboard.rs  bios.rs  bitfield.rs  connector.rs  enclosure.rs  lib.rs  memory.rs  processor.rs  slot.rs  system.rs
src/misc/: group_associations.rs  mod.rs  oem_strings.rs
src/structures/: 000_bios.rs  001_system.rs  002_baseboard.rs  003_enclosure.rs  004_processor.rs  007_cache.rs  008_port_connector.rs  009_system_slots.rs  011_oem_strings.rs  012_system_configuration_options.rs  013_bios_language.rs  014_group_associations.rs  016_physical_memory_array.rs  017_memory_device.rs  018_memory_error_32.rs  019_memory_array_mapped_address.rs  020_memory_device_mapped_address.rs  021_built_in_pointing_device.rs  022_portable_battery.rs  mod.rs
src/structures/015_system_event_log/: log_record_format.rs  mod.rs
src/system/: mod.rs  system_configuration_options.rs
src/test-data/: v3_smbios
tests/data/02daadcd/entries/15-0/: bin
tests/data/02daadcd/entries/19-0/: bin
tests/data/02daadcd/entries/20-0/: bin
tests/data/________/entries/21-0/: bin
tests/data/________/entries/22-0/: bin
tests/data/caf65269/entries/18-0/: bin
