[package]
authors = ["Jonathan Creekmore <jonathan@thecreekmores.org>"]
name = "dmidecode"
version = "0.9.0"
description = "Decode SMBIOS/DMI information into accessible data structures"
documentation = "https://docs.rs/dmidecode/"
repository = "https://github.com/jcreekmore/dmidecode"
license = "MIT"
rust-version = "1.70"
edition = "2021"

[dependencies]
bitflags = "2.9.1"
uuid = "1.17.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
default = ["std"]
std = []
