[package]
authors = ["Jonathan Creekmore <jonathan@thecreekmores.org>"]
name = "dmidecode"
version = "0.9.0"
description = "Decode SMBIOS/DMI information into accessible data structures"
documentation = "https://docs.rs/dmidecode/"
repository = "https://github.com/jcreekmore/dmidecode"
license = "MIT"
rust-version = "1.70"
edition = "2021"

[dependencies]
bitflags = { version = "2.9.1", default-features = false }
uuid = { version = "1.17.0", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
default = ["std"]
std = []
